hard-gists/94456/run.log
=== Docker Run Log for 94456 ===
Started at: Mi 29. Okt 18:25:59 CET 2025

[2025-10-29 18:26:00] START: Running container for 94456
[2025-10-29 18:26:00] SUCCESS: Container 689c4e888d0227992b8ac2189c7f969a0e598f42fe6f6d350221cad4490af77e started for 94456
=== Container logs for 94456 ===
  File "/snippet.py", line 32
    print "X Axis Center Discarded; Start: ",start," End: ",x
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 94456 ===
[2025-10-29 18:26:02] INFO: Container 689c4e888d0227992b8ac2189c7f969a0e598f42fe6f6d350221cad4490af77e has stopped
